--- a/bloco_6/exerciciop2b6.html
+++ b/bloco_6/exerciciop2b6.html
@@ -8,10 +8,14 @@
 </head>
 <body>
   <form action="" method="GET">
-    <h3>Insira email</h3>
-    <input type="text" name="email" placeholder="exemple@email.com" autocomplete="off" autofocus required>
-    <h3>Senha</h3>
-    <input type="password" name="senha" placeholder="senha" required>
+    <label for="email-id">Insira email:
+      <input type="text" name="email" id="email-id" placeholder="exemple@email.com" autocomplete="off" autofocus required>
+    </label>
+    <br>
+    <br>
+    <label for="senha-id">Senha:
+      <input type="password" name="senha" id="senha-id" placeholder="senha" required>
+    </label>
     <br>
     <input type="checkbox" name="lembrar">Lembre-me
     <br>
