Adiciona o h1 pra ficar bonitinho

--- a/bloco_6/exerciciop2b6.html
+++ b/bloco_6/exerciciop2b6.html
@@ -7,6 +7,7 @@
   <title>Exercício Bloco 6</title>
 </head>
 <body>
+  <h1>Formulário</h1>
   <form action="" method="GET">
     <label for="email-id">Insira email:
       <input type="text" name="email" id="email-id" placeholder="exemple@email.com" autocomplete="off" autofocus required>
